--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,22 @@
-name: Run SonarQube with Maven
-
-on: push
-
+name: build JAVA application
+on: # multiple triggers when this workflow can run
+ workflow_dispatch:
+ push:
+   branches:
+     - master
+ pull_request:
+   branches:
+     - master
 jobs:
-  build:
+  job1:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Clone the repo
+      uses: actions/checkout@v6
+    - name: Install java on runner
+      uses: actions/setup-java@v5
       with:
+        distribution: 'temurin'
         java-version: '17'
-        distribution: 'adopt'
-        cache: maven
-    - name: Build along with Maven cloud
-      run:  mvn -B verify sonar:sonar -Dsonar.projectKey=sonardemo-project-reachability_project1 -Dsonar.organization=sonardemo-project-reachability -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - name: build java code
+      run: mvn clean package
